--- a/alertDemo/alertdemo/index.html
+++ b/alertDemo/alertdemo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>alertdemo  你好我</title>
+    <title>alertemo</title>
   </head>
   <body>
     <div id="app"></div>
